@@ -5,4 +5,4 @@
 SHODRONE_CP=shodrone.backoffice.bootstrap/target/bootstrap-0.1.0.jar:shodrone.backoffice.bootstrap/target/dependency/*
 
 # Executa a aplicação Java
-java -cp "$SHODRONE_CP" shodrone.ShodroneBootstrap
+java --add-opens java.base/java.time=ALL-UNNAMED -cp "$SHODRONE_CP" shodrone.ShodroneBootstrap
