@@ -3,4 +3,4 @@
 # shellcheck disable=SC2125
 SHODRONE_CP=shodrone.app.backoffice/target/shodrone.app.backoffice-0.1.0.jar:shodrone.app.backoffice/target/dependency/*
 
-java -cp "$SHODRONE_CP" Shodrone.ShodroneBackoffice
+java --add-opens java.base/java.time=ALL-UNNAMED -cp "$SHODRONE_CP" Shodrone.ShodroneBackoffice
